objects/Apttus__ClauseApproval__c.object
<CustomObject>
    <description>Allows you to set up clause level approval process</description>
    <fields>
        <fullName>Apttus__Action__c</fullName>
        <description>Select a clause action in a document during a negotiation</description>
        <inlineHelpText>Select a clause action in a document during a negotiation</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the agreement associated with the clause approval</description>
        <inlineHelpText>ID of the agreement associated with the clause approval</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Clause Approvals</relationshipLabel>
        <relationshipName>ClauseApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ApprovalStatus__c</fullName>
        <defaultValue>&quot;Not Submitted&quot;</defaultValue>
        <description>Clause approval status</description>
        <inlineHelpText>Set an approval status</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the clause used to setup an approval process</description>
        <inlineHelpText>ID of the clause used to setup an approval process</inlineHelpText>
        <label>Clause</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Clause Approvals</relationshipLabel>
        <relationshipName>ClauseApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the document version for the clause approval</description>
        <inlineHelpText>ID of the document version for the clause approval</inlineHelpText>
        <label>Document Version</label>
        <referenceTo>Apttus__DocumentVersion__c</referenceTo>
        <relationshipLabel>Clause Approvals</relationshipLabel>
        <relationshipName>ClauseApprovals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clause Approval</label>
    <nameField>
        <label>Clause Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clause Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>